# learnGLES

glfw_style/: CMakeLists.txt  build.sh  readme.txt
glfw_style/GLESv30/lib/mali-opengl-es-emulator/: libEGL.so.1  libGLESv2.so.3  libMaliEmulator.so.1  liblog4cplus.so.1.1.2  liblog4cplus.so.7
glfw_style/src/: simple.c
